Exit from maintain window was fixed

--- a/Prototype/src/application/Maintain.fxml
+++ b/Prototype/src/application/Maintain.fxml
@@ -29,5 +29,10 @@
             <Image url="@../logo.jpg" />
          </image>
       </ImageView>
+      <Text fx:id="date" fill="#fffdfd" layoutX="838.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
