--- a/Prototype/src/application/Maintain.fxml
+++ b/Prototype/src/application/Maintain.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="669.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MaintainController">
+<AnchorPane fx:id="anchorPane" prefHeight="570.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MaintainController">
    <children>
-      <ImageView fitHeight="669.0" fitWidth="1014.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="669.0" fitWidth="985.0" pickOnBounds="true">
          <image>
             <Image url="@../bigstock-Stack-Of-Books-70033240.jpg" />
          </image>
       </ImageView>
-      <Text layoutX="12.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" wrappingWidth="134.0">
+      <Text fx:id="welcomeText" fill="WHITE" layoutX="14.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" wrappingWidth="370.0">
          <font>
-            <Font size="29.0" />
+            <Font size="24.0" />
          </font></Text>
       <Text fx:id="TextGroup7" layoutX="365.0" layoutY="664.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyright © 2018 Group7" />
       <ImageView fx:id="Group7Logo" blendMode="MULTIPLY" fitHeight="150.0" fitWidth="200.0" layoutX="348.0" layoutY="572.0" pickOnBounds="true" preserveRatio="true">
@@ -24,19 +24,22 @@
             <Image url="@../logo.jpg" />
          </image>
       </ImageView>
-      <Text fx:id="date" fill="#fffdfd" layoutX="838.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="102.0">
+      <Text fx:id="date" fill="#fffdfd" layoutX="845.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.0">
          <font>
-            <Font size="20.0" />
+            <Font size="24.0" />
          </font>
       </Text>
-      <ToolBar layoutX="437.0" layoutY="30.0" prefHeight="45.0" prefWidth="559.0" style="-fx-background-color: 0;">
+      <ToolBar layoutX="300.0" layoutY="40.0" prefHeight="45.0" prefWidth="685.0" style="-fx-background-color: 0;">
         <items>
-            <Button depthTest="DISABLE" mnemonicParsing="false" text="Maintain Questions" />
+            <Button fx:id="maintainQuestionButton" depthTest="DISABLE" mnemonicParsing="false" onMouseEntered="#maintainQuestionShowOption" onMouseExited="#maintainQuestionHideOption" text="Maintain Questions" />
+            <Button mnemonicParsing="false" text="Maintain Exams" />
             <Button mnemonicParsing="false" text="Order Reports" />
             <Button mnemonicParsing="false" text="Confirm Grades" />
             <Button disable="true" mnemonicParsing="false" text="Button" visible="false" />
             <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#logOutButtonHandler" text="Logout" />
         </items>
       </ToolBar>
+      <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" />
+      <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" />
    </children>
 </AnchorPane>
