--- a/Prototype/src/application/TeacherScreen.fxml
+++ b/Prototype/src/application/TeacherScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="570.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MaintainController">
+<AnchorPane fx:id="anchorPane" prefHeight="570.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TeacherScreenController">
    <children>
       <ImageView fitHeight="669.0" fitWidth="985.0" pickOnBounds="true">
          <image>
@@ -29,7 +29,7 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <ToolBar layoutX="300.0" layoutY="40.0" prefHeight="45.0" prefWidth="685.0" style="-fx-background-color: 0;">
+      <ToolBar layoutX="199.0" layoutY="40.0" prefHeight="45.0" prefWidth="554.0" style="-fx-background-color: 0;">
         <items>
             <Button fx:id="maintainQuestionButton" depthTest="DISABLE" mnemonicParsing="false" onMouseEntered="#maintainQuestionShowOption" onMouseExited="#maintainQuestionHideOption" text="Maintain Questions" />
             <Button mnemonicParsing="false" text="Maintain Exams" />
@@ -39,7 +39,7 @@
             <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#logOutButtonHandler" text="Logout" />
         </items>
       </ToolBar>
-      <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" />
-      <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" />
+      <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" visible="false" />
+      <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" visible="false" />
    </children>
 </AnchorPane>
