--- a/Prototype/src/application/TeacherWindow.fxml
+++ b/Prototype/src/application/TeacherWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" focusTraversable="false" prefHeight="570.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TeacherScreenController">
+<AnchorPane fx:id="anchorPane" focusTraversable="false" prefHeight="570.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TeacherWindowController">
    <children>
       <ImageView fitHeight="669.0" fitWidth="985.0" pickOnBounds="true">
          <image>
@@ -33,15 +33,14 @@
       <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" visible="false" />
       <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" visible="false" />
       <Button fx:id="logoutButton" layoutX="910.0" layoutY="52.0" mnemonicParsing="false" onAction="#logOutButtonHandler" text="Logout" />
-      <TabPane focusTraversable="false" layoutX="13.0" layoutY="44.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="145.0" prefWidth="533.0" stylesheets="@TeacherWindow.css" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" focusTraversable="false" layoutX="13.0" layoutY="44.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="145.0" prefWidth="533.0" style="-fx-focus-traversable: false;" stylesheets="@TeacherWindow.css" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Maintain Questions">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@../../../../../../Users/Alex/Desktop/New%20Text%20Document%20(3).css">
+              <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" stylesheets="">
                      <children>
-                        <Button focusTraversable="false" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="View Questions" />
-                        <Button focusTraversable="false" layoutY="62.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="173.0" text="Edit/Remove Question" />
-                        <Button focusTraversable="false" layoutY="31.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question " />
+                        <Button focusTraversable="false" layoutX="-10.0" layoutY="31.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="173.0" text="Edit/Remove Question" />
+                        <Button focusTraversable="false" layoutX="-10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" />
                      </children>
                   </AnchorPane>
             </content>
