--- a/Prototype/src/application/TeacherWindow.fxml
+++ b/Prototype/src/application/TeacherWindow.fxml
@@ -14,6 +14,9 @@
          <image>
             <Image url="@../bigstock-Stack-Of-Books-70033240.jpg" />
          </image>
+         <effect>
+            <ColorAdjust brightness="-0.24" />
+         </effect>
       </ImageView>
       <Text fx:id="welcomeText" fill="WHITE" layoutX="14.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" wrappingWidth="370.0">
          <font>
@@ -25,42 +28,43 @@
             <Image url="@../logo.jpg" />
          </image>
       </ImageView>
-      <Text fx:id="date" fill="#fffdfd" layoutX="831.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.0">
+      <Text fx:id="date" fill="#fffdfd" layoutX="730.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.0">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
       <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" visible="false" />
       <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" visible="false" />
-      <Button fx:id="logoutButton" layoutX="910.0" layoutY="52.0" mnemonicParsing="false" onAction="#logOutButtonHandler" text="Logout" />
-      <TabPane fx:id="tabPane" focusTraversable="false" layoutX="13.0" layoutY="44.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="145.0" prefWidth="533.0" style="-fx-focus-traversable: false;" stylesheets="@TeacherWindow.css" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Maintain Questions">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="180.0" prefWidth="200.0" stylesheets="">
-                     <children>
-                        <Button focusTraversable="false" layoutX="-10.0" layoutY="31.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="173.0" text="Edit/Remove Question" />
-                        <Button focusTraversable="false" layoutX="-10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Maintain Exams">
-            <content>
-              <AnchorPane focusTraversable="false" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-            <Tab text="Order Reports">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
-            </Tab>
-            <Tab text="Confirm Grades">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="106.0" prefWidth="763.0" />
-              </content>
-            </Tab>
-        </tabs>
-      </TabPane>
+      <Button fx:id="logoutButton" layoutX="870.0" layoutY="13.0" mnemonicParsing="false" onAction="#logOutButtonHandler" stylesheets="@../../../../../../Users/Alex/Desktop/logout.css" text="Logout" />
+      <ScrollPane layoutX="3.0" layoutY="170.0" prefHeight="397.0" prefWidth="980.0" visible="false">
+         <content>
+            <CheckBox mnemonicParsing="false" />
+         </content>
+      </ScrollPane>
+      <MenuBar focusTraversable="false" layoutY="52.0" prefHeight="115.0" prefWidth="784.0" stylesheets="@menuBarTeacher.css">
+        <menus>
+          <Menu mnemonicParsing="false" text="Maintain Questions">
+            <items>
+              <MenuItem fx:id="addQuestion" mnemonicParsing="false" text="Add Question" />
+                  <MenuItem fx:id="editOrRemoveButton" mnemonicParsing="false" onAction="#openEditorRemove" text="Edit/Remove Question" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Maintain Exams">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Work in progress" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Order Reports">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Work in progress" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Confirm Grades">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Work in progress" />
+              </items>
+            </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
