--- a/Prototype/src/application/TeacherWindow.fxml
+++ b/Prototype/src/application/TeacherWindow.fxml
@@ -33,9 +33,7 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <Button fx:id="addQuestiton" layoutX="298.0" layoutY="85.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Add Question" visible="false" />
-      <Button fx:id="editOrRemoveQuestion" layoutX="298.0" layoutY="116.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="173.0" text="Edit/Remove Question" visible="false" />
-      <Button fx:id="logoutButton" layoutX="870.0" layoutY="13.0" mnemonicParsing="false" onAction="#logOutButtonHandler" stylesheets="@../../../../../../Users/Alex/Desktop/logout.css" text="Logout" />
+      <Button fx:id="logoutButton" layoutX="870.0" layoutY="13.0" mnemonicParsing="false" onAction="#logOutButtonHandler" text="Logout" />
       <ScrollPane layoutX="3.0" layoutY="170.0" prefHeight="397.0" prefWidth="980.0" visible="false">
          <content>
             <CheckBox mnemonicParsing="false" />
@@ -46,7 +44,7 @@
           <Menu mnemonicParsing="false" text="Maintain Questions">
             <items>
               <MenuItem fx:id="addQuestion" mnemonicParsing="false" text="Add Question" />
-                  <MenuItem fx:id="editOrRemoveButton" mnemonicParsing="false" onAction="#openEditorRemove" text="Edit/Remove Question" />
+                  <MenuItem fx:id="editOrRemoveQuestion" mnemonicParsing="false" onAction="#openEditorRemove" text="Edit\Remove Question" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Maintain Exams">
@@ -66,5 +64,14 @@
             </Menu>
         </menus>
       </MenuBar>
+      <TableView fx:id="tableView" editable="true" layoutX="4.0" layoutY="88.0" prefHeight="581.0" prefWidth="980.0" stylesheets="@table%20view.css">
+        <columns>
+          <TableColumn fx:id="questionIDColumn" prefWidth="95.0" text="Question ID" />
+          <TableColumn fx:id="authorColumn" prefWidth="102.0" text="Author" />
+            <TableColumn fx:id="questionTextColumn" prefWidth="480.0" text="Question Text" />
+            <TableColumn fx:id="possibleAnswersColumn" prefWidth="171.0" text="Possible Answers" />
+            <TableColumn fx:id="correctAnswerColumn" prefWidth="131.0" text="Correct Answer" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
